// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders correctly > with both header background and border colors 1`] = `
<div
  class="sc-beySbL SUWic"
>
  <a
    class="sc-irLwvM srBUj"
    color="#786efd"
    rel="noopener noreferrer"
    style="display: block; margin-right: auto; width: 100%;"
    target="_blank"
  >
    <div
      class="sc-jTQDnk iMnXlK"
      data-testid="card-header"
    >
      <div
        class="sc-guDLRU gHhAsQ"
      >
        <span
          class="sc-fsYeqr ifhdzD"
        >
          T
        </span>
      </div>
      <div>
        <span
          aria-label="Test Card"
          class="sc-csKIKD kpcBlP translate"
          data-mui-internal-clone-element="true"
          data-testid="tooltip"
        >
          <span
            class="sc-dmyDGl brGFJY"
          >
            Test Card
          </span>
        </span>
      </div>
    </div>
  </a>
  <div
    class="sc-gLLvbB QxgBH only-child"
    data-testid="card-footer"
  >
    <span
      aria-label=""
      class="sc-csKIKD kpcBlP translate"
      data-mui-internal-clone-element="true"
      data-testid="tooltip"
    >
      <a
        class="sc-irLwvM dcCqof"
        color="#786efd"
        href="/settings"
        rel="noopener noreferrer"
        style="align-items: center; display: flex; gap: 0.5rem; margin-right: auto;"
        target="_blank"
      >
        <button
          class="sc-kFCscd iJyYvu"
          data-testid="button"
        >
          <span
            class="sc-jsEegq translate"
            data-testid="button-label"
          >
            <span
              class="sc-iBdmCa gSvxfA"
            >
              Settings
            </span>
          </span>
        </button>
      </a>
    </span>
  </div>
</div>
`;

exports[`Card > renders correctly > with custom header border bottom color 1`] = `
<div
  class="sc-beySbL SUWic"
>
  <a
    class="sc-irLwvM srBUj"
    color="#786efd"
    rel="noopener noreferrer"
    style="display: block; margin-right: auto; width: 100%;"
    target="_blank"
  >
    <div
      class="sc-jTQDnk kgXVod"
      data-testid="card-header"
    >
      <div
        class="sc-guDLRU gHhAsQ"
      >
        <span
          class="sc-fsYeqr ifhdzD"
        >
          T
        </span>
      </div>
      <div>
        <span
          aria-label="Test Card"
          class="sc-csKIKD kpcBlP translate"
          data-mui-internal-clone-element="true"
          data-testid="tooltip"
        >
          <span
            class="sc-dmyDGl brGFJY"
          >
            Test Card
          </span>
        </span>
      </div>
    </div>
  </a>
  <div
    class="sc-gLLvbB QxgBH only-child"
    data-testid="card-footer"
  >
    <span
      aria-label=""
      class="sc-csKIKD kpcBlP translate"
      data-mui-internal-clone-element="true"
      data-testid="tooltip"
    >
      <a
        class="sc-irLwvM dcCqof"
        color="#786efd"
        href="/settings"
        rel="noopener noreferrer"
        style="align-items: center; display: flex; gap: 0.5rem; margin-right: auto;"
        target="_blank"
      >
        <button
          class="sc-kFCscd iJyYvu"
          data-testid="button"
        >
          <span
            class="sc-jsEegq translate"
            data-testid="button-label"
          >
            <span
              class="sc-iBdmCa gSvxfA"
            >
              Settings
            </span>
          </span>
        </button>
      </a>
    </span>
  </div>
</div>
`;
